--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js",
+    "startsql": "nodemon app-w-sql.js",
     "start-server": "node app.js"
   },
   "author": "Maximilian Schwarzmüller",
@@ -19,6 +20,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
+    "mongodb": "^3.4.0",
     "mysql2": "^2.0.2",
     "pug": "^2.0.3",
     "sequelize": "^5.21.2"
