--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "mongodb": "^3.4.0",
+    "mongoose": "^5.8.0",
     "mysql2": "^2.0.2",
     "pug": "^2.0.3",
     "sequelize": "^5.21.2"
