--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "mongodb": "^3.4.0",
     "mongoose": "^5.8.0",
     "mysql2": "^2.0.2",
+    "nodemailer": "^6.4.2",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "pug": "^2.0.3",
     "sequelize": "^5.21.2"
   }
