--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.17.0",
+    "express-validator": "^6.3.0",
     "mongodb": "^3.4.0",
     "mongoose": "^5.8.0",
     "mysql2": "^2.0.2",
