--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "express-validator": "^6.3.0",
     "mongodb": "^3.4.0",
     "mongoose": "^5.8.0",
+    "multer": "^1.4.2",
     "mysql2": "^2.0.2",
     "nodemailer": "^6.4.2",
     "nodemailer-sendgrid-transport": "^0.2.0",
+    "pdfkit": "^0.11.0",
     "pug": "^2.0.3",
     "sequelize": "^5.21.2"
   }
