--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "nodemailer-sendgrid-transport": "^0.2.0",
     "pdfkit": "^0.11.0",
     "pug": "^2.0.3",
-    "sequelize": "^5.21.2"
+    "sequelize": "^5.21.2",
+    "stripe": "^7.14.0"
   }
 }
