--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "nodejs-complete-guide",
+  "name": "backend",
   "version": "1.0.0",
-  "description": "Complete Node.js Guide",
+  "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -9,32 +9,31 @@
     "startsql": "nodemon app-w-sql.js",
     "start-server": "node app.js"
   },
-  "author": "Maximilian Schwarzmüller",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^1.18.3"
+    "nodemon": "^2.0.2"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.18.3",
+    "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
     "connect-mongodb-session": "^2.2.0",
     "csurf": "^1.10.0",
     "dotenv": "^8.2.0",
-    "ejs": "^2.6.1",
-    "express": "^4.16.3",
-    "express-handlebars": "^3.0.0",
+    "ejs": "^3.0.1",
+    "express": "^4.17.1",
+    "express-handlebars": "^3.1.0",
     "express-session": "^1.17.0",
     "express-validator": "^6.3.0",
     "mongodb": "^3.4.0",
-    "mongoose": "^5.8.0",
+    "mongoose": "^5.8.1",
     "multer": "^1.4.2",
     "mysql2": "^2.0.2",
     "nodemailer": "^6.4.2",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "pdfkit": "^0.11.0",
-    "pug": "^2.0.3",
-    "sequelize": "^5.21.2",
+    "pug": "^2.0.4",
+    "sequelize": "^5.21.3",
     "stripe": "^7.14.0"
   }
 }
